Configurar proyecto a Maven

--- a/pom.xml
+++ b/pom.xml
@@ -40,4 +40,5 @@
   		<version>1.6.1</version>
   	</dependency>
   </dependencies>
+  <url>https://github.com/Seminario2018/sistema_gestion_docente</url>
 </project>
