--- a/pom.xml
+++ b/pom.xml
@@ -42,18 +42,32 @@
   		<version>1.6.1</version>
   	</dependency>
   	
-  	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi/3.9 -->
+  	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi/3.17 -->
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi</artifactId>
 	    <version>3.17</version>
 	</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml/3.9 -->
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml/3.17 -->
 	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>3.17</version>
+	</dependency>
+	
+	 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi/3.9 -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>3.9</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml/3.9 -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>3.9</version>
 	</dependency>
 
   </dependencies>
