--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all/1.3 -->
 	<dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest-all</artifactId>
@@ -41,6 +43,13 @@
 		<version>5.1.46</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.jfxtras/jfxtras-labs/8.0-r6 -->
+	<dependency>
+	    <groupId>org.jfxtras</groupId>
+	    <artifactId>jfxtras-labs</artifactId>
+	    <version>8.0-r6</version>
+	</dependency>
+
 	<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail/1.6.1 -->
   	<dependency>
   		<groupId>com.sun.mail</groupId>
