--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,17 @@
 		<artifactId>poi-ooxml</artifactId>
 		<version>3.17</version>
 	</dependency>
-	
+
+	<dependency>
+	    <groupId>org.apache.velocity</groupId>
+	    <artifactId>velocity</artifactId>
+	    <version>1.7</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.velocity</groupId>
+	    <artifactId>velocity-tools</artifactId>
+	    <version>2.0</version>
+	</dependency>
   </dependencies>
   <url>https://github.com/Seminario2018/sistema_gestion_docente</url>
 </project>
